Fix next config and CORS